Amend the 1.0 contract for self-contained application images
The gate of issue #150, answered with measured prototypes rather
than prose. docs/decisions/one-point-zero-contract.md gains the
amendment: primary 1.0 downloads are four platform-native
jpackage --type app-image artifacts (macOS arm64 + Intel, Windows
x86-64, Linux x86-64) with a pinned Temurin 21 runtime included -
users do not install Java - each built on its own platform, with
the portable Java-dependent ZIP kept as the published fallback.

scripts/build-app-image.sh is the prototype made real: jpackage
over the built JAR with the jdeps-measured module list
(java.base,desktop,logging,prefs; asserted six-module closure with
datatransfer+xml from the runtime release file), the launcher
carrying --enable-native-access and passing --dark, the runtime's
generated legal/ tree asserted present, a build-info.txt recording
version/modules/packager/runtime, and an inner juranometria-smoke
launcher rendering the reference chart through the bundled runtime
alone. Measured on Apple silicon: 76 MB unpacked, 25 MB compressed,
native launches with NO java on PATH (light, --dark, space path),
smoke render byte-identical to the classpath smoke, and the image
BYTE-REPRODUCIBLE across two same-machine builds.

The app-image workflow builds the platform-neutral JAR once, then
each of the four cells (macos-15, macos-15-intel, ubuntu-24.04,
windows-latest) natively images it with pinned Temurin 21.0.12,
builds twice recording reproducibility honestly, asserts the
runtime pin, launches with no system Java in light and --dark from
a space path, and publishes sizes/module inventory to the run
summary plus the image artifact.

The icon: the Tabler north-star glyph (MIT, the same pinned v3.46.0
as the toolbar) in chart ink on the atlas paper - IconGen plus
committed PNG/icns/ico assets under packaging/icon/. The unsigned
Gatekeeper/SmartScreen behavior is documented plainly in the
packaged README.

309 tests; M31 byte-identical -